--- a/index.html
+++ b/index.html
@@ -3,10 +3,57 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width">
-    <title>Bazing | HomePage</title>
-    <link rel="stylesheet" href="index.css">
+    <title>Bazing</title>
+
+    <!-- Get Font -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
+
+    <!-- CSS Files -->
+    <link rel="stylesheet" href="./styles/index.css">
+    <link rel="stylesheet" href="./styles/hero.css">
+    <link rel="stylesheet" href="./styles/animations.css">
 </head>
 <body>
-    Hello World!
+    <div class="intro">
+        <video autoplay muted>
+            <source src="./src/img/hero/hero.mp4" type="video/mp4">
+        </video>
+    </div>
+
+    <div class="hero">
+        <div class="hero-container img-container">
+            <div class="hero-overlay">
+                <div class="logo-position">
+                    <div class="logo">
+                        <a href="./">
+                            <div class="logo-container img-container"></div>
+                        </a>
+                    </div>
+                </div>
+
+                <div class="hero-content">
+                    <h1>Get a Infinity of<br>Brand new books!</h1>
+
+                    <a href="./">
+                        <div class="signin-btn">
+                            <p>Sign In</p>
+                        </div>
+                    </a>
+                </div>
+
+                <div class="scroll-down">
+                    <p>Scroll Down</p>
+
+                    <div class="arrow-scroll">
+                        <div class="arrow-scroll-container img-container"></div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <script src="./scripts/intro.js"></script>
 </body>
 </html>
