--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     <link rel="stylesheet" href="./styles/index.css">
     <link rel="stylesheet" href="./styles/hero.css">
     <link rel="stylesheet" href="./styles/animations.css">
+    <link rel="stylesheet" href="./styles/media-querys.css">
 </head>
 <body>
     <div class="intro">
@@ -23,32 +24,32 @@
     </div>
 
     <div class="hero">
-        <div class="hero-container img-container">
-            <div class="hero-overlay">
-                <div class="logo-position">
-                    <div class="logo">
-                        <a href="./">
-                            <div class="logo-container img-container"></div>
-                        </a>
-                    </div>
-                </div>
+        <div class="hero-container img-container"></div>
 
-                <div class="hero-content">
-                    <h1>Get a Infinity of<br>Brand new books!</h1>
-
+        <div class="hero-overlay">
+            <div class="logo-position">
+                <div class="logo">
                     <a href="./">
-                        <div class="signin-btn">
-                            <p>Sign In</p>
-                        </div>
+                        <div class="logo-container img-container"></div>
                     </a>
                 </div>
+            </div>
 
-                <div class="scroll-down">
-                    <p>Scroll Down</p>
+            <div class="hero-content">
+                <h1>Get a Infinity of<br>Brand new books!</h1>
 
-                    <div class="arrow-scroll">
-                        <div class="arrow-scroll-container img-container"></div>
+                <a href="./">
+                    <div class="signin-btn">
+                        <p>Sign In</p>
                     </div>
+                </a>
+            </div>
+
+            <div class="scroll-down">
+                <p>Scroll Down</p>
+
+                <div class="arrow-scroll">
+                    <div class="arrow-scroll-container img-container"></div>
                 </div>
             </div>
         </div>
