BAZING-2 | Front-End | Fixing intro animation bugs and adding favicon!

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width">
     <title>Bazing</title>
+    <link rel="shortcut icon" href="./src/img/utils/logo.png">
 
     <!-- Get Font -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -23,7 +24,7 @@
         </video>
     </div>
 
-    <div class="hero">
+    <div class="hero invisible">
         <div class="hero-container img-container"></div>
 
         <div class="hero-overlay">
