--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     <link rel="stylesheet" href="./styles/index.css">
     <link rel="stylesheet" href="./styles/hero.css">
     <link rel="stylesheet" href="./styles/about.css">
+    <link rel="stylesheet" href="./styles/trending-books.css">
     <link rel="stylesheet" href="./styles/animations.css">
     <link rel="stylesheet" href="./styles/media-querys.css">
 </head>
@@ -59,12 +60,39 @@
         </div>
 
         <div class="about">
-            <h2>Take a look on the<br>more trending books!</h2>
-            <h2>Take a look on the<br>more trending books!</h2>
+            <h2>Take a look on the more trending books!</h2>
+            <h2>Take a look on the more trending books!</h2>
+        </div>
+
+        <div class="trending-books">
+            <h2>Trending Books</h2>
+
+            <div class="books">
+                <div class="books-items">
+                    <div class="img-container book1"></div>
+                </div>
+
+                <div class="books-items">
+                    <div class="img-container book2"></div>
+                </div>
+
+                <div class="books-items">
+                    <div class="img-container book3"></div>
+                </div>
+
+                <div class="books-items">
+                    <div class="img-container book4"></div>
+                </div>
+
+                <div class="books-items">
+                    <div class="img-container book5"></div>
+                </div>
+            </div>
         </div>
     </div>
 
     <script src="./scripts/intro.js"></script>
     <script src="./scripts/about.js"></script>
+    <script src="./scripts/trending-books.js"></script>
 </body>
 </html>
