BAZING-7 | Front-End | Finish HomePage Front-End!

--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
     <link rel="stylesheet" href="./styles/about.css">
     <link rel="stylesheet" href="./styles/trending-books.css">
     <link rel="stylesheet" href="./styles/recommendations.css">
+    <link rel="stylesheet" href="./styles/footer.css">
     <link rel="stylesheet" href="./styles/animations.css">
     <link rel="stylesheet" href="./styles/media-querys.css">
 </head>
@@ -154,10 +155,73 @@
                 </div>
             </div>
         </div>
+
+        <div class="footer">
+            <div class="top-content">
+                <div class="left-content">
+                    <h2 class="opacity-zero">Get a discount on your<br>first order!</h2>
+
+                    <div class="discount opacity-zero">
+                        <div class="discount-info">
+                            <p>20% OFF!</p>
+                            <p>16.99€</p>
+                            <p>20.99€</p>
+                        </div>
+
+                        <a href="./">
+                            <div class="order-now">
+                                <p>Order Now!</p>
+                            </div>
+                        </a>
+                    </div>
+                </div>
+
+                <div class="right-content opacity-zero">
+                    <div class="steve-book">
+                        <div class="steve-book-container img-container"></div>
+                    </div>
+
+                    <div class="table">
+                        <div class="table-container img-container"></div>
+                    </div>
+                </div>
+            </div>
+
+            <div class="bottom-content">
+                <div class="footer-left">
+                    <div class="footer-icons">
+                        <div class="logo-container img-container"></div>
+                    </div>
+
+                    <p>© 2025 Bazing</p>
+                </div>
+
+                <div class="footer-right">
+                    <a href="https://github.com/Ice-San">
+                        <div class="footer-social">
+                            <div class="github img-container"></div>
+                        </div>
+                    </a>
+
+                    <a href="https://www.linkedin.com/in/devrubencosta">
+                        <div class="footer-social">
+                            <div class="linkdin img-container"></div>
+                        </div>
+                    </a>
+
+                    <a href="https://www.instagram.com/rubencosta_2004/">
+                        <div class="footer-social">
+                            <div class="instagram img-container"></div>
+                        </div>
+                    </a>
+                </div>
+            </div>
+        </div>
     </div>
 
     <script src="./scripts/about.js"></script>
     <script src="./scripts/trending-books.js"></script>
     <script src="./scripts/recommendations.js"></script>
+    <script src="./scripts/footer.js"></script>
 </body>
 </html>
