BAZING-8 | Front-End | Created SignIn Page!

--- a/index.html
+++ b/index.html
@@ -12,14 +12,14 @@
     <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
 
     <!-- CSS Files -->
-    <link rel="stylesheet" href="./styles/index.css">
-    <link rel="stylesheet" href="./styles/hero.css">
-    <link rel="stylesheet" href="./styles/about.css">
-    <link rel="stylesheet" href="./styles/trending-books.css">
-    <link rel="stylesheet" href="./styles/recommendations.css">
-    <link rel="stylesheet" href="./styles/footer.css">
-    <link rel="stylesheet" href="./styles/animations.css">
-    <link rel="stylesheet" href="./styles/media-querys.css">
+    <link rel="stylesheet" href="./src/styles/index.css">
+    <link rel="stylesheet" href="./src/styles/hero.css">
+    <link rel="stylesheet" href="./src/styles/about.css">
+    <link rel="stylesheet" href="./src/styles/trending-books.css">
+    <link rel="stylesheet" href="./src/styles/recommendations.css">
+    <link rel="stylesheet" href="./src/styles/footer.css">
+    <link rel="stylesheet" href="./src/styles/animations.css">
+    <link rel="stylesheet" href="./src/styles/media-querys.css">
 </head>
 <body>
     <div class="hero">
@@ -37,7 +37,7 @@
             <div class="hero-content">
                 <h1>Get a Infinity of<br>Brand new books!</h1>
 
-                <a href="./">
+                <a href="./memberzone/">
                     <div class="signin-btn">
                         <p>Sign In</p>
                     </div>
@@ -168,7 +168,7 @@
                             <p>20.99€</p>
                         </div>
 
-                        <a href="./">
+                        <a href="./memberzone/">
                             <div class="order-now">
                                 <p>Order Now!</p>
                             </div>
@@ -219,9 +219,9 @@
         </div>
     </div>
 
-    <script src="./scripts/about.js"></script>
-    <script src="./scripts/trending-books.js"></script>
-    <script src="./scripts/recommendations.js"></script>
-    <script src="./scripts/footer.js"></script>
+    <script src="./src/scripts/about.js"></script>
+    <script src="./src/scripts/trending-books.js"></script>
+    <script src="./src/scripts/recommendations.js"></script>
+    <script src="./src/scripts/footer.js"></script>
 </body>
 </html>
