BAZING-9 | Front-End | Created SignUp Page!

--- a/signup/index.html
+++ b/signup/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width">
-    <title>Bazing | SignIn</title>
+    <title>Bazing | SignUp</title>
     <link rel="shortcut icon" href="../src/img/utils/logo.webp">
 
     <!-- Get Font -->
@@ -33,6 +33,14 @@
                     </div>
 
                     <div class="input">
+                        <input type="text" placeholder="Enter Username">
+                        
+                        <div class="input-icon">
+                            <div class="username-icon img-container"></div>
+                        </div>
+                    </div>
+
+                    <div class="input">
                         <input type="password" placeholder="Password">
                         
                         <div class="input-icon password-input">
@@ -42,10 +50,10 @@
                 </div>
 
                 <div class="signin">
-                    <p>Sign In</p>
+                    <p>Sign Up</p>
                 </div>
 
-                <p>Don't have a account? <a href="../signup/">Sign up here!</a></p>
+                <p>Don't have a account? <a href="../signin/">Sign In here!</a></p>
             </div>
         </div>
     </div>
