--- a/book-info/index.html
+++ b/book-info/index.html
@@ -17,6 +17,7 @@
     <link rel="stylesheet" href="../memberzone/styles/menu.css">
     <link rel="stylesheet" href="../memberzone/styles/media-querys.css">
     <link rel="stylesheet" href="./styles/books-info.css">
+    <link rel="stylesheet" href="./styles/media-querys.css">
 </head>
 <body>
     <div class="sticky-content">
@@ -82,7 +83,7 @@
                 </div>
             </div>
 
-            <div class="test-btn">
+            <div class="info-btn">
                 <p>+ Add to Cart</p>
             </div>
         </div>
