BRANCH-15 | Front-End | Created Cart Page!

--- a/profile/index.html
+++ b/profile/index.html
@@ -33,22 +33,34 @@
                 <h1>Bazing</h1>
             </div>
 
+            <div class="search">
+                <input type="text" placeholder="Search">
+
+                <div class="search-img">
+                    <div class="search-container">
+                        <div class="search-icon img-container"></div>
+                    </div>
+                </div>
+            </div>
+
             <div class="options">
                 <div class="cart">
                     <div class="cart-popup">
                         <p>+9</p>
                     </div>
 
-                    <a class="cart-container" href="./">
+                    <a class="cart-container" href="../cart/">
                         <div class="cart-container-size">
                             <div class="cart-icon img-container"></div>
                         </div>
                     </a>
                 </div>
                 
-                <div class="profile invisible">
-                    <div class="profile-container img-container"></div>
-                </div>
+                <a href="../profile/">
+                    <div class="profile invisible">
+                        <div class="profile-container img-container"></div>
+                    </div>
+                </a>
 
                 <a href="../signin/">
                     <div class="signin">
@@ -185,7 +197,7 @@
                 </div>
 
                 <div class="menu-option">
-                    <a href="./">Cart</a>
+                    <a href="../cart/">Cart</a>
                     <div class="menu-line"></div>
                 </div>
 
