--- a/cart/index.html
+++ b/cart/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width">
-    <title>Bazing | MemberZone</title>
+    <title>Bazing | Cart</title>
 
     <link rel="shortcut icon" href="../src/img/utils/logo.webp">
 
@@ -13,10 +13,10 @@
     <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
 
     <link rel="stylesheet" href="../src/styles/index.css">
-    <link rel="stylesheet" href="./styles/header.css">
-    <link rel="stylesheet" href="./styles/categories.css">
-    <link rel="stylesheet" href="./styles/lists.css">
-    <link rel="stylesheet" href="./styles/menu.css">
+    <link rel="stylesheet" href="../memberzone/styles/header.css">
+    <link rel="stylesheet" href="../memberzone/styles/menu.css">
+    <link rel="stylesheet" href="../memberzone/styles/media-querys.css">
+    <link rel="stylesheet" href="./styles/cart.css">
     <link rel="stylesheet" href="./styles/media-querys.css">
 </head>
 <body>
@@ -72,71 +72,76 @@
                 </div>
             </div>
         </div>
+    </div>
 
-        <div class="categories">
-            <div class="categories-content">
-                <div class="tag selected-tag">
-                    <p>All</p>
-                </div>
+    <div class="cart-content" id="cart-content">
+        <div class="cart-content-left">
+            <h2>Items</h2>
+            
+            <div class="cart-items">
+                <div class="cart-product">
+                    <div class="cart-product-left">
+                        <div class="cart-product-img">
+                            <div class="img-container"></div>
+                        </div>
 
-                <div class="tag">
-                    <p>Comedy</p>
-                </div>
+                        <div class="cart-product-info">
+                            <h2>The Twisted One</h2>
+                            <p>EUR 10.99</p>
+                        </div>
+                    </div>
 
-                <div class="tag">
-                    <p>Romance</p>
-                </div>
+                    <div class="cart-product-edit">
+                        <div class="cart-product-delete">
+                            <div class="cart-product-delete-container img-container"></div>
+                        </div>
 
-                <div class="tag">
-                    <p>Biology</p>
-                </div>
-
-                <div class="tag">
-                    <p>Criminal</p>
-                </div>
-
-                <div class="tag">
-                    <p>History</p>
-                </div>
-
-                <div class="tag">
-                    <p>Horror</p>
-                </div>
-
-                <div class="tag">
-                    <p>HQ</p>
-                </div>
-
-                <div class="tag">
-                    <p>Manga</p>
-                </div>
-
-                <div class="tag">
-                    <p>Psychology</p>
-                </div>
-
-                <div class="tag">
-                    <p>Sci-Fi</p>
-                </div>
-
-                <div class="tag">
-                    <p>Technology</p>
-                </div>
-
-                <div class="tag">
-                    <p>Terror</p>
+                        <div class="cart-product-options">
+                            <p>-</p>
+                            <p>10</p>
+                            <p>+</p>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
+
+        <div class="cart-sumary">
+            <div class="cart-sumary-container">
+                <h2>Summary</h2>
+
+                <div class="cart-sumary-calcs">
+                    <div class="cart-sumary-item">
+                        <div class="cart-sumary-item-name">
+                            <p>The Twisted One</p>
+                            <p>2x</p>
+                        </div>
+
+                        <p>EUR 10.99</p>
+                    </div>
+                </div>
+
+                <div class="cart-sumary-line"></div>
+
+                <div class="cart-sumary-total">
+                    <p>Balance</p>
+                    <p>EUR 0.00</p>
+                </div>
+
+                <div class="cart-sumary-checkout">
+                    <p>Checkout</p>
+                </div>
+            </div>
+        </div>
+
+        <div class="cart-sumary-mobile">
+            <p>Balance: <span>EUR 10.99</span></p>
+
+            <div class="cart-sumary-mobile-checkout">
+                <p>Checkout</p>
+            </div>
+        </div>
     </div>
-
-    <div class="page-content"></div>
-
-    <div class="result-search-content invisible">
-        <div class="books-list"></div>
-    </div>
-
-    <div class="result-tag-content invisible"></div>
 
     <div class="menu-content invisible">
         <div class="exit">
@@ -153,22 +158,18 @@
                 </div>
 
                 <div class="menu-option">
-                    <a href="../cart/">Cart</a>
+                    <a href="../memberzone/">MemberZone</a>
                     <div class="menu-line"></div>
                 </div>
 
                 <div class="menu-option invisible">
-                    <a href="../profile/">Profile</a>
+                    <a href="./">Profile</a>
                     <div class="menu-line"></div>
                 </div>
             </div>
         </div>
     </div>
 
-    <script src="./scripts/categories.js"></script>
-    <script src="./scripts/books.js"></script>
     <script src="./scripts/menu.js"></script>
-    <script src="./scripts/search.js"></script>
-    <script src="./scripts/tag.js"></script>
 </body>
 </html>
