BAZING-16 | Back-End | Created DB & Auth!

--- a/book/index.html
+++ b/book/index.html
@@ -128,6 +128,7 @@
         </div>
     </div>
 
+    <script src="../src/scripts/create-db.js"></script>
     <script src="../memberzone/scripts/menu.js"></script>
 </body>
 </html>
