--- a/memberzone/index.html
+++ b/memberzone/index.html
@@ -165,6 +165,7 @@
         </div>
     </div>
 
+    <script src="../src/scripts/create-db.js"></script>
     <script src="./scripts/categories.js"></script>
     <script src="./scripts/books.js"></script>
     <script src="./scripts/menu.js"></script>
