--- a/cart/index.html
+++ b/cart/index.html
@@ -170,6 +170,7 @@
         </div>
     </div>
 
+    <script src="../src/scripts/create-db.js"></script>
     <script src="./scripts/menu.js"></script>
 </body>
 </html>
