--- a/profile/index.html
+++ b/profile/index.html
@@ -214,6 +214,7 @@
         </div>
     </div>
 
+    <script src="../src/scripts/create-db.js"></script>
     <script src="./scripts/menu.js"></script>
     <script src="./scripts/settings.js"></script>
     <script src="./scripts/edit-form.js"></script>
