--- a/signin/index.html
+++ b/signin/index.html
@@ -50,6 +50,7 @@
         </div>
     </div>
 
+    <script src="../src/scripts/create-db.js"></script>
     <script src="./scripts/index.js"></script>
 </body>
 </html>
