--- a/cart/index.html
+++ b/cart/index.html
@@ -44,10 +44,6 @@
 
             <div class="options">
                 <div class="cart">
-                    <div class="cart-popup">
-                        <p>+9</p>
-                    </div>
-
                     <a class="cart-container" href="../cart/">
                         <div class="cart-container-size">
                             <div class="cart-icon img-container"></div>
@@ -55,13 +51,13 @@
                     </a>
                 </div>
                 
-                <a href="../profile/">
-                    <div class="profile invisible">
+                <a id="profile-header" href="../profile/" class="invisible">
+                    <div class="profile">
                         <div class="profile-container img-container"></div>
                     </div>
                 </a>
 
-                <a href="../signin/">
+                <a id="signin-header" href="../signin/">
                     <div class="signin">
                         <p>Sign In</p>
                     </div>
@@ -152,7 +148,7 @@
 
         <div class="menu-info">
             <div class="menu-items">
-                <div class="menu-option">
+                <div id="signin-menu" class="menu-option">
                     <a href="../signin/">Sign In</a>
                     <div class="menu-line"></div>
                 </div>
@@ -162,8 +158,8 @@
                     <div class="menu-line"></div>
                 </div>
 
-                <div class="menu-option invisible">
-                    <a href="./">Profile</a>
+                <div id="profile-menu" class="menu-option invisible">
+                    <a href="../profile/">Profile</a>
                     <div class="menu-line"></div>
                 </div>
             </div>
@@ -172,5 +168,8 @@
 
     <script src="../src/scripts/create-db.js"></script>
     <script src="./scripts/menu.js"></script>
+    <script src="./scripts/check-signin.js"></script>
+    <script src="./scripts/put-items.js"></script>
+    <script src="./scripts/checkout.js"></script>
 </body>
 </html>
