--- a/memberzone/index.html
+++ b/memberzone/index.html
@@ -44,10 +44,6 @@
 
             <div class="options">
                 <div class="cart">
-                    <div class="cart-popup">
-                        <p>+9</p>
-                    </div>
-
                     <a class="cart-container" href="../cart/">
                         <div class="cart-container-size">
                             <div class="cart-icon img-container"></div>
@@ -55,13 +51,13 @@
                     </a>
                 </div>
                 
-                <a href="../profile/">
-                    <div class="profile invisible">
+                <a id="profile-header" href="../profile/" class="invisible">
+                    <div class="profile">
                         <div class="profile-container img-container"></div>
                     </div>
                 </a>
 
-                <a href="../signin/">
+                <a id="signin-header" href="../signin/">
                     <div class="signin">
                         <p>Sign In</p>
                     </div>
@@ -147,7 +143,7 @@
 
         <div class="menu-info">
             <div class="menu-items">
-                <div class="menu-option">
+                <div id="signin-menu" class="menu-option">
                     <a href="../signin/">Sign In</a>
                     <div class="menu-line"></div>
                 </div>
@@ -157,7 +153,7 @@
                     <div class="menu-line"></div>
                 </div>
 
-                <div class="menu-option invisible">
+                <div id="profile-menu" class="menu-option invisible">
                     <a href="../profile/">Profile</a>
                     <div class="menu-line"></div>
                 </div>
@@ -171,5 +167,8 @@
     <script src="./scripts/menu.js"></script>
     <script src="./scripts/search.js"></script>
     <script src="./scripts/tag.js"></script>
+    <script src="./scripts/add-cart.js"></script>
+    <script src="./scripts/book-info.js"></script>
+    <script src="./scripts/check-signin.js"></script>
 </body>
 </html>
