--- a/profile/index.html
+++ b/profile/index.html
@@ -45,10 +45,6 @@
 
             <div class="options">
                 <div class="cart">
-                    <div class="cart-popup">
-                        <p>+9</p>
-                    </div>
-
                     <a class="cart-container" href="../cart/">
                         <div class="cart-container-size">
                             <div class="cart-icon img-container"></div>
@@ -56,13 +52,13 @@
                     </a>
                 </div>
                 
-                <a href="../profile/">
-                    <div class="profile invisible">
+                <a id="profile-header" href="../profile/" class="invisible">
+                    <div class="profile">
                         <div class="profile-container img-container"></div>
                     </div>
                 </a>
 
-                <a href="../signin/">
+                <a id="signin-header" href="../signin/">
                     <div class="signin">
                         <p>Sign In</p>
                     </div>
@@ -83,7 +79,7 @@
                 <div class="profile-box-overlay">
                     <div class="profile-box-info">
                         <div class="profile-photo">
-                            <div class="img-container"></div>
+                            <div class="profile-photo img-container"></div>
                             
                             <label class="invisible">
                                 <input type="file">
@@ -93,7 +89,7 @@
 
                         <div class="profile-inputs">
                             <div class="profile-input">
-                                <p>rubencosta3000</p>
+                                <p id="username-profile">rubencosta3000</p>
                                 <input class="invisible" type="text" placeholder="Username">
                             </div>
 
@@ -132,17 +128,6 @@
                                 <div class="profile-choices">
                                     <h2>Settings</h2>
 
-                                    <div class="profile-choice">
-                                        <p>App Theme</p>
-                                        <p id="profile-edit-theme">Edit</p>
-                                    </div>
-
-                                    <div class="profile-choice">
-                                        <p>Redeem Code</p>
-                                        <p id="profile-edit-redeem">Edit</p>
-                                    </div>
-                                </div>
-
                                 <div class="profile-delete">
                                     <p>Delete Account</p>
                                 </div>
@@ -150,34 +135,6 @@
                         </div>
                     </div>
                 </div>
-            </div>
-        </div>
-    </div>
-
-    <div class="invisible" id="profile-popup">
-        <h2></h2>
-
-        <div class="invisible" id="profile-popup-theme">
-            <div class="profile-white-btn">
-                <p>White Theme</p>
-            </div>
-
-            <div class="profile-black-btn">
-                <p>Black Theme</p>
-            </div>
-        </div>
-
-        <div class="profile-popup-input invisible">
-            <input type="text" placeholder="Redeem Code">
-        </div>
-
-        <div class="profile-popup-btn">
-            <div class="profile-cancel-btn">
-                <p>Cancel</p>
-            </div>
-
-            <div class="profile-proceed-btn">
-                <p>Proceed</p>
             </div>
         </div>
     </div>
@@ -191,7 +148,7 @@
 
         <div class="menu-info">
             <div class="menu-items">
-                <div class="menu-option">
+                <div id="signin-menu" class="menu-option">
                     <a href="../signin/">Sign In</a>
                     <div class="menu-line"></div>
                 </div>
@@ -201,13 +158,8 @@
                     <div class="menu-line"></div>
                 </div>
 
-                <div class="menu-option">
-                    <a href="../memberzone/">MemberZone</a>
-                    <div class="menu-line"></div>
-                </div>
-
-                <div class="menu-option invisible">
-                    <a href="./">Profile</a>
+                <div id="profile-menu" class="menu-option invisible">
+                    <a href="../profile/">Profile</a>
                     <div class="menu-line"></div>
                 </div>
             </div>
@@ -216,7 +168,10 @@
 
     <script src="../src/scripts/create-db.js"></script>
     <script src="./scripts/menu.js"></script>
-    <script src="./scripts/settings.js"></script>
     <script src="./scripts/edit-form.js"></script>
+    <script src="./scripts/check-signin.js"></script>
+    <script src="./scripts/load-profile.js"></script>
+    <script src="./scripts//edit-profile.js"></script>
+    <script src="./scripts/delete-user.js"></script>
 </body>
 </html>
